// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Teaser should render correctly with just a title 1`] = `
<Teaser
  details=""
  location=""
  subTitle=""
  title="some title"
>
  <div
    className="Teaser"
  >
    <div
      className="Teaser__titleLine"
    >
      <Text
        className="Teaser__title"
        context="brand"
        inline={true}
        size="normal"
      >
        <span
          className="Text--context_brand Teaser__title"
        >
          some title
        </span>
      </Text>
    </div>
  </div>
</Teaser>
`;

exports[`Teaser should render with all props defined 1`] = `
<Teaser
  details="details about this job"
  location="location"
  subTitle="Organization"
  title="A job title"
>
  <div
    className="Teaser"
  >
    <div
      className="Teaser__titleLine"
    >
      <Text
        className="Teaser__title"
        context="brand"
        inline={true}
        size="normal"
      >
        <span
          className="Text--context_brand Teaser__title"
        >
          A job title
        </span>
      </Text>
      <Text
        className="Teaser__location"
        context="muted"
        inline={true}
        size="normal"
      >
        <span
          className="Text--context_muted Teaser__location"
        >
          location
        </span>
      </Text>
    </div>
    <Text
      className="Teaser__subTitle"
      context="accent"
      inline={true}
      size="normal"
    >
      <span
        className="Text--context_accent Teaser__subTitle"
      >
        Organization
      </span>
    </Text>
    <Text
      context="muted"
      inline={true}
      size="normal"
    >
      <span
        className="Text--context_muted"
      >
        details about this job
      </span>
    </Text>
  </div>
</Teaser>
`;
